--- a/views/user/gamedetail.ejs
+++ b/views/user/gamedetail.ejs
@@ -515,7 +515,7 @@
 
                 <!-- Buy Box -->
                 <div class="buy-box">
-                    <div class="price-tag mb-4">$<%= game.price %></div>
+                    <div class="price-tag mb-4">&#8377;<%= game.price %></div>
                     
                     <div class="space-y-4">
                         <!-- Platform Selection -->
