--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -32,8 +32,14 @@
             <span class="ml-3">Category</span>
         </a>
 
-        <a href="/admin/platform" class="flex items-center px-6 py-3 text-gray-300 hover:bg-[#2a2a2a] transition-colors">
-            <i class="fas fa-tags w-5"></i>
+        <a href="/admin/company" class="flex items-center px-6 py-3 text-gray-300 hover:bg-[#2a2a2a] transition-colors">
+            <i class="fas fa-gamepad w-5"></i>
+
+            <span class="ml-3">Company</span>
+        </a>
+
+        <a href="/admin" class="flex items-center px-6 py-3 text-gray-300 hover:bg-[#2a2a2a] transition-colors">
+            <i class="fas fa-cubes w-5"></i>
             <span class="ml-3">Platforms</span>
         </a>
 
